--- a/.github/workflows/github-cicd-example.yml
+++ b/.github/workflows/github-cicd-example.yml
@@ -1,43 +1,17 @@
-name: CI
-
-# Other types of triggers exist -- lookup the docs to see! on new git pushes is most useful
-# on:
-#  milestone:
-#    type: [closed]
-
+name: GitHub Actions Demo
 on: [push]
-
 jobs:
-  build:
-
-    runs-on: macOS-latest
-    
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
         uses: actions/checkout@v2
-      - name: CocoaPod Install
-        run: pod install
-      #- name: Use this line to see how many versions of Xcode are installed on the CI
-      #  run: ls /Applications | grep Xcode
-
-      # Use this if your app requires a specific Xcode (or breaks on the latest one haha)
-      #- name: Force xcode 11 
-      #  run: sudo xcode-select -switch /Applications/Xcode_11.4.app
-      # - how to run build/test all in one line for starters
-#      - name: iPhone 11 Test
-#        run:  xcodebuild test -scheme affirm-me-test -workspace affirm-me.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.1'
-      
-#      - name: iPad Air Test
-#        run:  xcodebuild test -scheme affirm-me-test -workspace affirm-me.xcworkspace -destination 'platform=iOS Simulator,name=iPad Air (3rd generation),OS=13.1'
-      - name: iOS build setup
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
         run: |
-          xcodebuild build-for-testing -scheme uitests-test -workspace uitests.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 12' #-allowProvisioningUpdates
-      
-      - name: testing ... iPhone 8
-        run: xcodebuild test-without-building -scheme uitests-test -workspace uitests.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8'
-        
-#      - name: testing ... iPhone 12 Pro Max
-#        run: xcodebuild test-without-building -scheme affirm-me-test -workspace affirm-me.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max'
-
- #     - name: testing ... iPad Air
-#        run: xcodebuild test-without-building -scheme affirm-me-test -workspace affirm-me.xcworkspace -destination 'platform=iOS Simulator,name=iPad Air (3rd generation)'
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
